@@ -1,4 +1,5 @@
 HEAD
+	+ Add kernel management to Smart Admin feature
 	+ Add mail recipient for smart admin report
 6.1
 	+ Fix broken link to zentyal store and tracker in dashboard widget
